added font awesome icon and cancel save button

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@
 body {
   overflow-x: hidden !important;
 }
+
+.icon_display {
+  display: none;
+}
+.icon_display:hover,
+.text_pad-input:hover + .icon_display {
+  display: block;
+}
